--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 h1 {
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
+	color:rgb(127, 144, 255);
 }
-
+div {
+	margin-top: 10px;
+}
 .robots {
 	flex-wrap: wrap;
 	display: flex;
@@ -47,13 +50,27 @@ h1 {
 	border-radius: 100px; 
 } 
 
+.left_arm:hover { 
+	margin-right: 20px; 
+	transition: 1s ease-out;
+} 
+
 .left_arm { 
 	margin-right: 10px; 
+}
+
+.right_arm:hover { 
+	margin-left: 15px; 
+	-webkit-transform: rotate(20deg);
+    -moz-transform: rotate(20deg);
+    -o-transform: rotate(20deg);
+    -ms-transform: rotate(20deg);
+    transform: rotate(-45deg);
 } 
 
 .right_arm { 
 	margin-left: 10px; 
-} 
+}
 
 .torso { 
 	width: 200px; 
